Add more floating windows

--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -52,4 +52,6 @@ yabai -m rule --add app="^Slack" manage=off
 yabai -m rule --add app="^Mail" manage=off
 yabai -m rule --add app="^Tunnelblick" manage=off
 yabai -m rule --add app="^Configurations" manage=off
+yabai -m rule --add app="^Finder" manage=off
+yabai -m rule --add app="^Archive Utility" manage=off
 
