--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,3 +24,10 @@
   colorMoved = default
 [log]
 	follow = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+[pull]
+  rebase = true
